Bug 1831820 - Do not use external compositor surface with negative scaling when compositor does not support the negative scaling r=gfx-reviewers,lsalzman

DComp video overlay does not handle negative scaling. Then the patch disables it by using CompositorCapabilities.

Differential Revision: https://phabricator.services.mozilla.com/D177726