gfx/webrender_bindings/RenderCompositorANGLE.cpp
@@ -915,6 +915,8 @@ void RenderCompositorANGLE::GetCompositorCapabilities(
   } else {
     aCaps->virtual_surface_size = 0;
   }
+  // DComp video overlay does not support negative scaling. See Bug 1831820
+  aCaps->supports_external_compositor_surface_negative_scaling = false;
 }
 
 void RenderCompositorANGLE::EnableNativeCompositor(bool aEnable) {
